src/components/custom-accordion-item/custom-accordion-item.module.css
.item {
  --transition-duration: 500ms;
  --transition: var(--transition-duration) ease-in-out;

  background-color: var(--color-surface-accordion);

  margin-block-end: 0.5rem;

  border-radius: var(--border-radius);

  .button {
    background-color: inherit;
    color: inherit;

    display: flex;
    align-items: center;

    inline-size: 100%;

    padding: 0.5rem 0.75rem;

    border: none;

    font-size: var(--fz-500);
    font-weight: 300;

    cursor: pointer;

    transition: background-color 0.1s ease-in-out;

    h3 {
      margin: 0;

      font: inherit;
    }

    .chevron {
      margin-inline-start: auto;

      font-size: var(--fz-600);

      transition: var(--transition);
      transition-property: transform;
    }

    &.expanded {
      background-color: var(--color-surface-accordion-expanded);

      .chevron {
        transform: rotate(180deg);
      }
    }

    @media (hover: hover) {
      &:hover {
        background-color: var(--color-surface-accordion-hover);
      }
    }
  }

  .content {
    transition: var(--transition);
    transition-property: block-size;

    .panel {
      padding: 1rem 0;
    }
  }
}

@media (min-width: 1000px) {
  .item {
    margin-block-end: 1rem;

    .button {
      padding: 1rem;

      font-weight: 500;
    }

    .content {
      .panel {
        padding: 2rem 1rem;
      }
    }
  }
}

